# hitsz_2024_comparch

lab1/: CMakeLists.txt
lab1/cmake/: env_params.cmake
lab1/src/lab1/: CMakeLists.txt  gemm.cpp  gemm_kernel.S  gemm_kernel.h  print_integer.S  test_gemm_kernel.cpp
lab1/tools/: lmbench.tgz
lab2/: CMakeLists.txt
lab2/cmake/: utils.cmake
lab2/env/: cpu_parallel_env.dockerfile  cpu_parallel_env.yaml
lab2/src/lab2/: CMakeLists.txt  gemm_kernel.h  gemm_kernel_baseline.S  gemm_kernel_baseline.cpp  gemm_kernel_opt_loop.S  gemm_kernel_opt_loop.cpp  gemm_kernel_opt_prefetch.S  gemm_kernel_opt_prefetch.cpp  test_gemm_kernel_opt_loop.cpp  test_gemm_kernel_opt_prefetch.cpp
lab3/: CMakeLists.txt
lab3/src/lab3/: CMakeLists.txt  gemm_kernel_opt.h  gemm_kernel_opt_avx.S  gemm_kernel_opt_avx.cpp  gemm_kernel_opt_loop_unrolling.S  gemm_kernel_opt_loop_unrolling.cpp  gemm_kernel_opt_openmp.cpp  openmp_gemm.h  openmp_gemm_baseline.cpp  openmp_gemm_opt.cpp  test_gemm_kernel_opt_avx.cpp  test_gemm_kernel_opt_loop_unrolling.cpp  test_openmp_gemm.cpp
lab4-5/: a.out  matrix_mul.cu
